--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -56,7 +56,7 @@ body {
     font-size: 0.813rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #47404f;
+    color: #000000;
     text-align: left;
     background-color: #fff;
 }
