--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -52,9 +52,8 @@
 
 body {
     margin: 0;
-    font-family: "Nunito", sans-serif;
-    font-size: 0.813rem;
-    font-weight: 400;
+    font-size: 2rem;
+    font-family: "Angsana New";
     line-height: 1.5;
     color: #000000;
     text-align: left;
@@ -62,8 +61,9 @@ body {
 }
 
 html {
-    font-family: sans-serif;
+    font-family: "Angsana New";
     line-height: 1.15;
+    font-size: 1rem;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -ms-overflow-style: scrollbar;
