--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -53,7 +53,7 @@
 body {
     margin: 0;
     font-size: 2rem;
-    font-family: "Angsana New";
+    font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     color: #000000;
     text-align: left;
