--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -52,8 +52,8 @@
 
 body {
     margin: 0;
-    font-family: "Nunito", sans-serif;
-    font-size: 0.813rem;
+    font-size: 24px;
+    font-family: "Angsana New";
     font-weight: 400;
     line-height: 1.5;
     color: #000000;
@@ -62,7 +62,8 @@ body {
 }
 
 html {
-    font-family: sans-serif;
+    font-size: 24px;
+    font-family: "Angsana New";
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
