--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -64,6 +64,7 @@ body {
 html {
     font-family: sans-serif;
     line-height: 1.15;
+    font-size: 0.813rem;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     -ms-overflow-style: scrollbar;
