--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -632,10 +632,17 @@ th {
 }
 
 .invoice-summary {
-    width: 228px;
+    width: 220px;
     text-align: left;
     float: right;
-    margin-top: 1.9em;
+    margin-top: 0px;
+}
+
+.invoice-summary_so {
+    width: 165px;
+    text-align: left;
+    float: right;
+    margin-top: 0px;
 }
 
 .invoice-summary p,
