--- a/dist-assets/css/themes/styleforprint2.css
+++ b/dist-assets/css/themes/styleforprint2.css
@@ -56,6 +56,8 @@ p {
 
 p {
     display: block;
+    font-family: "Angsana New";
+    font-size: 18px;
     /* margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -102,7 +104,7 @@ h6,
 
 h4,
 .h4 {
-    font-size: 1.2195rem;
+    font-size: 1.8rem;
 }
 
 h1,
@@ -110,6 +112,10 @@ h2,
 h3,
 h4,
 h5,
+.h5 {
+    font-size: 2.1rem;
+}
+
 h6,
 .card-title,
 .text-title {
@@ -600,14 +606,15 @@ th {
 .invoice-summary h5 {
     display: flex;
     justify-content: flex-end;
-    margin: 0.5em 0;
+    margin: 0;
 }
 
 .invoice-summary {
     width: 228px;
     text-align: left;
     float: right;
-    margin-top: 1.9em;
+    margin-top: 0px;
+    padding-left: 15px;
 }
 
 .invoice-summary p,
