--- a/dist-assets/css/themes/styleforprint.css
+++ b/dist-assets/css/themes/styleforprint.css
@@ -1121,15 +1121,8 @@ strong {
     justify-content: flex-start;
 }
 
-.logo {
+.logox {
     width: 120px;
-}
-
-.logo img {
-    width: 80px;
-    height: 80px;
-    margin: 0 auto;
-    display: block;
 }
 
 
